@@ -1,8 +1,23 @@
 #!/bin/sh
+#
+# Licensed to the Apache Software Foundation (ASF) under one or more
+# contributor license agreements.  See the NOTICE file distributed with
+# this work for additional information regarding copyright ownership.
+# The ASF licenses this file to You under the Apache License, Version 2.0
+# (the "License"); you may not use this file except in compliance with
+# the License.  You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
 
 B_DIR="`pwd`/"
 docker pull meabed/debian-jdk
 
 #
-docker build -t "meabed/nutch:2.3" $B_DIR/nutch/
-docker build -t "meabed/cassandra" $B_DIR/cassandra/
+docker build -t "apache/nutch:2.x" $B_DIR/nutch/
+docker build -t "apache/cassandra" $B_DIR/cassandra/
