@@ -1,5 +1,21 @@
 <?xml version="1.0"?>
 <?xml-stylesheet type="text/xsl" href="configuration.xsl"?>
+<!--
+ Licensed to the Apache Software Foundation (ASF) under one or more
+ contributor license agreements.  See the NOTICE file distributed with
+ this work for additional information regarding copyright ownership.
+ The ASF licenses this file to You under the Apache License, Version 2.0
+ (the "License"); you may not use this file except in compliance with
+ the License.  You may obtain a copy of the License at
+
+     http://www.apache.org/licenses/LICENSE-2.0
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+-->
 
 <configuration>
 
@@ -20,50 +36,13 @@
         <value>0.0.1</value>
     </property>
     <property>
-        <name>http.agent.url</name>
-        <value>http://www.google.com</value>
-    </property>
-    <property>
-        <name>http.agent.email</name>
-        <value>mo.meabed@gmail.com</value>
-    </property>
-    <property>
         <name>http.content.limit</name>
-        <value>1000000</value>
+        <value>-1</value>
     </property>
     <property>
         <name>storage.data.store.class</name>
         <value>org.apache.gora.cassandra.store.CassandraStore</value>
         <description>Default class for storing data</description>
-    </property>
-    <property>
-        <name>fetcher.server.delay</name>
-        <value>2.0</value>
-        <description>The number of seconds the fetcher will delay between
-            successive requests to the same server.
-        </description>
-    </property>
-    <property>
-        <name>indexer.max.title.length</name>
-        <value>300</value>
-        <description>The maximum number of characters of a title that are indexed. A value of -1 disables this check.
-            Used by index-basic.
-        </description>
-    </property>
-    <property>
-        <name>db.ignore.external.links</name>
-        <value>true</value>
-        <description>If true, outlinks leading from a page to external hosts
-            will be ignored. This is an effective way to limit the crawl to include
-            only initially injected hosts, without creating complex URLFilters.
-        </description>
-    </property>
-    <property>
-        <name>fetcher.parse</name>
-        <value>true</value>
-        <description>If true, fetcher will parse content. NOTE: previous releases would
-            default to true. Since 2.0 this is set to false as a safer default.
-        </description>
     </property>
     <property>
         <name>plugin.includes</name>
